# task3

./: .gitignore  README.md  base.py  indexer.py  main.py  parser.py  pyproject.toml  requirements.txt  test.py
test/: test.py
