[tool.poetry]
name = "inverted-index"
version = "0.1.0"
description = "makes inverted index(compression included)"
authors = ["dmitry30"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.4"
pympler = "^1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
